--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "babel-loader": "^9.1.2",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
