--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
+    "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "babel-loader": "^9.1.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
+    "framer-motion": "^12.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
+    "react-toastify": "^11.0.3",
     "styled-components": "^6.0.3",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1"
